# orin-pipeline

./: .env.example  .gitignore  CLAUDE_START.md  CONTEXT_CHEATSHEET.md  DECISIONS.md  ISSUES.md  PROGRESS.md  README.md  RULES.md  SESSION.md  TESTING.md  pyproject.toml
api/: __init__.py  deps.py  main.py
api/routes/: __init__.py  embed.py  pipeline.py  playlists.py  search.py  stats.py  tracks.py
api/schemas/: __init__.py  pipeline.py  playlist.py  search.py  stats.py  track.py
api/services/: __init__.py  event_manager.py  import_runner.py  pipeline_runner.py
docs/: API_PLAN.md  CHAT_APP_PLAN.md
sessions/: 2026-01-13-api.md  2026-01-14-snippet-audio-fix.md
src/: __init__.py  __main__.py  audio.py  cli.py  config.py  curated.py  db.py  embedder.py  indexer.py  logger.py  lrc_parser.py  lrclib_api.py  pipeline.py  pipeline_status.py  segmenter.py  storage.py
